--- a/cob_sim_trad/CMakeLists.txt
+++ b/cob_sim_trad/CMakeLists.txt
@@ -39,4 +39,12 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+# Install Python scripts
+install(PROGRAMS
+  src/torso_teleop_node.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+ament_python_install_package(${PROJECT_NAME})
+
 ament_package()
